<resources>
    <string name="app_name" translatable="false">Base Architecture</string>
    <string name="product_name" translatable="false">Name</string>
    <string name="product_description" translatable="false">Description</string>
    <string name="product_quantity" translatable="false">Quantity</string>
    <string name="product_price" translatable="false">Price</string>
    <string name="loading_message">Loadin......</string>
    <string name="create_button_create">Create</string>
    <string name="validate_internet_error">No se puede conectar a internet.</string>
    <string name="borrado_exitoso">Borrado Exitoso</string>
    <string name="borrado_fallido">Borrado Fallido</string>
    <string name="product_detail_button_delete">Borrar Producto</string>
    <string name="dialog_error_title">Error</string>
    <string name="positive_button">OK</string>
    <string name="correct">Transaccion Exitosa</string>
    <string name="update_exitoso">Actualización Exitosa</string>
    <string name="update_fallido">Actualización Fallida</string>
    <string name="sin_datos">No se encontraro datos para la consulta.</string>
    <string name="create_exitoso">Registro insertado con exito.</string>
    <string name="create_fallido">Fallo el registro.</string>
    <string name="customer_name">Nombre</string>
    <string name="customer_surname">Apellido</string>
    <string name="phone_description">Descripción</string>
    <string name="phone_number">Número</string>
    <string name="location_y">Latitud</string>
    <string name="location_x">Longitud</string>
    <string name="geo_reference">Localización</string>
    <string name="phone_type">Point</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_product">Productos</string>
    <string name="title_contact">Contactos</string>
    <string name="title_perfil">Perfil</string>
    <string name="main_textview_user">\@usuario</string>
    <string name="main_textview_like"> Me gusta</string>
    <string name="main_textview_follow"> Siguiendo</string>
    <string name="main_textview_follower"> Seguidores</string>
    <string name="main_textview_notification">Notificaciones</string>
    <string name="main_textview_sync">Sincronizar con: </string>
    <string name="main_button_close">Cerrar SesiÃ³n</string>
    <string name="main_string_despedida">Hasta pronto</string>
    <string-array name="main_spinner_sync">
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Instagram</item>
        <item>Linked In</item>
        <item>Youtube</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
