<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.com.etn.mvp_base.views.activities.CreateCustomerActivity"
    android:orientation="vertical"
    >
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/activity_create_customer_edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/activity_create_customer_edit_text_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_surname"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.40"
            android:layout_width="wrap_content">
            <EditText
                android:id="@+id/activity_create_customer_edit_text_description"
                android:layout_width="match_parent"
                android:hint="@string/phone_description"
                android:inputType="text"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_margin="3dp">
            <EditText
                android:id="@+id/activity_create_customer_edit_text_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:minWidth="50dp"
                android:inputType="phone"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geo_reference"/>
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.40"
            android:layout_width="wrap_content"
            android:hint="@string/location_x">

            <EditText
                android:id="@+id/activity_create_customer_edit_text_location_x"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_margin="3dp"
            android:hint="@string/location_y">
            <EditText
                android:id="@+id/activity_create_customer_edit_text_location_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:inputType="numberDecimal"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/activity_create_customer_button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_button_create"
        />


</LinearLayout>
