<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/empanadas"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/product_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/product_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:layout_below="@id/product_detail_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/product_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/product_description"
            android:layout_below="@id/product_detail_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:layout_below="@id/product_detail_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/product_detail_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:layout_below="@id/product_detail_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="italic"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:layout_below="@id/product_detail_quantity"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/product_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:layout_below="@id/product_detail_quantity"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="italic"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

</LinearLayout>
